<?xml version="1.0" encoding="utf-8"?>
<!--*************************************************************************-->
<!-- SCICHART® Copyright SciChart Ltd. 2011-2026. All rights reserved. -->
<!--   -->
<!-- Web: http://www.scichart.com -->
<!-- Support: support@scichart.com -->
<!-- Sales:   sales@scichart.com -->
<!--  -->
<!-- example_freehand_annotation_fragment.xml is part of the SCICHART® Examples. Permission is hereby granted -->
<!-- to modify, create derivative works, distribute and publish any part of this source -->
<!-- code whether for commercial, private or personal use. -->
<!--  -->
<!-- The SCICHART® examples are distributed in the hope that they will be useful, but -->
<!-- without any warranty. It is provided "AS IS" without warranty of any kind, either -->
<!-- expressed or implied. -->
<!--*************************************************************************-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/deleteAnnotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/delete_annotation" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/drawingModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/draw"
            android:textColor="#FFFFFF"
            android:checked="true"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/brushControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:id="@+id/colorWhite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#FFFFFF"
                android:layout_margin="5dp"/>

            <View
                android:id="@+id/colorYellow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#FFFF00"
                android:layout_margin="5dp"/>

            <View
                android:id="@+id/colorGreen"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#00FF00"
                android:layout_margin="5dp"/>

            <View
                android:id="@+id/colorBlue"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#0000FF"
                android:layout_margin="5dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thickness"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="5dp"/>

            <SeekBar
                android:id="@+id/thicknessSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:progress="2"/>

        </LinearLayout>

    </LinearLayout>

    <com.scichart.charting.visuals.SciChartSurface
        android:id="@+id/surface"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</LinearLayout>
